[metadata]
name = pytest-redis
version = 2.2.0
url = https://github.com/ClearcodeHQ/pytest-redis
description = Redis fixtures and fixture factories for Pytest.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = tests, py.test, pytest, fixture, redis
license = LGPLv3+
maintainer = Grzegorz Śliwiński
maintainer_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Framework :: Pytest

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
package_dir =
    =src
install_requires =
    pytest
    port-for>=0.6.0
    mirakuru
    redis


[options.entry_points]
pytest11 =
    pytest_redis = pytest_redis.plugin

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest-cov
    pytest-xdist
    mock

[pycodestyle]
max-line-length = 100
exclude = docs/*,build/*,venv/*

[pydocstyle]
ignore = D203,D212
match = '(?!docs|build|venv).*\.py'

[tool:pytest]
addopts = --max-worker-restart=0 --showlocals --verbose  --cov pytest_redis  --cov tests
testpaths = tests
